--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         <h2 class = "carrossel__título">NOVOS LANÇAMENTOS
     
            <div class = "swiper-wrapper">
-            <div class = "swiper-slide"><img src = "IMG/ApacheKafka.png" alt = "livro de programação"></div>
-
+            <div class = "swiper-slide"> <img src = "IMG/ApacheKafka.png" alt = "livro de programação"></div>
+           <div class = "swiper-slide"> <img src = "IMG/Liderança.png" alt = "livro que fala sobre liderança em empresas"></div>
+           <div class = "swiper-slide"> <img src = "IMG/Javasscript.png" alt = "livro de programação de Javasscript"></div>
+           <div class = "swiper-slide"> <img src = "IMG/Guia Front-end.png" alt = "Guia de programação em front-end"></div>
         </div>
     </div>
 
